# strata-ai

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
cli/: README.md  pyproject.toml
cli/src/strata_ai_cli/: __init__.py  main.py
cli/src/strata_ai_cli/commands/: create_agent.py
cli/src/strata_ai_cli/templates/base/: .env.example.j2  Dockerfile.j2  README.md.j2  pyproject.toml.j2
cli/src/strata_ai_cli/templates/base/agent/: agent.py.j2  tools.py.j2
cli/src/strata_ai_cli/templates/base/app/: main.py.j2
cli/src/strata_ai_cli/templates/base/tests/: test_agent.py.j2
sdk/: README.md  pyproject.toml
sdk/src/strata_ai/: __init__.py
sdk/src/strata_ai/agent/: patterns.py
sdk/src/strata_ai/core/: agent.py  app.py  config.py  di.py  exceptions.py  lifespan.py  messages.py  models.py  routers.py  state_migration.py  task_queue.py  tool.py
sdk/src/strata_ai/runtime/: __init__.py  base.py  langgraph_adapter.py  mock.py
tests/cli/: test_create_agent.py
tests/sdk/agent/: test_react_agent.py  test_tool.py
tests/sdk/core/: test_core_contract.py  test_message_contracts.py  test_runtime_contract.py  test_state_migration.py  test_task_queue.py
tests/sdk/runtime/: test_adapter_boundary.py  test_langgraph_adapter.py  test_parity.py
