[project]
name = "strata-ai"
version = "0.1.0"
description = "Strata AI SDK"
readme = "README.md"
authors = [
    { name = "felix", email = "1mutindafelix@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.136.3",
    "httpx==0.28.1",
    "loguru==0.7.3",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
]


[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
